Bug 194746 - Top directory with colon in name (e.g. "/F:"): The file or folder F: does not exist
Summary: Top directory with colon in name (e.g. "/F:"): The file or folder F: does not...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdecore (other bugs)
Version First Reported In: 4.9-Git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-31 12:37 UTC by g111
Modified: 2011-07-12 15:33 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description g111 2009-05-31 12:37:57 UTC
Version:           KDE 4.2.88 (KDE 4.3 >= 20090527) (using Devel)
OS:                Linux
Installed from:    Compiled sources

konqueror and dolphin are not able to open a directory called /F:

* mkdir /F: (important: below root "/")
* touch /F\:/foo
* Start konqueror or dolphin and try to enter /F:

=> Both apps cannot handle this directory. "The file or folder F: does not exist" is displayed as error message. 

Maybe /F: ist interpreted as kio-protocol name?

Creating a directory "F:" in your home directory does not make any problems.
Comment 1 esigra 2009-11-07 00:12:16 UTC
This bug still exists in KDE 4.3.1.
Comment 2 Jeffery MacEachern 2010-12-20 13:25:50 UTC
Confirmed in 4.6 trunk from about a week ago.
I think this may be related to how Qt handles paths on Windows, but I have yet to verify that.
Comment 3 Dawit Alemayehu 2011-07-10 15:15:19 UTC
This is caused by an upstream bug in QUrl::toLocalFile. Opened a ticket there to get the issue addressed. See http://bugreports.qt.nokia.com/browse/QTBUG-20322.
Comment 4 Dawit Alemayehu 2011-07-12 15:32:58 UTC
Git commit b66e59e16c5bd94772911f01b9517abb8f13658f by Dawit Alemayehu.
Committed on 10/07/2011 at 08:36.
Pushed by adawit into branch 'KDE/4.7'.

Handle top level directories with a ':' in their names, e.g. /F:, correctly on
non-Windows platforms.

BUG: 194746
FIXED-IN: 4.7.0
REVIEW: 101906

M  +6    -0    kdecore/io/kurl.cpp     

http://commits.kde.org/kdelibs/b66e59e16c5bd94772911f01b9517abb8f13658f
Comment 5 Dawit Alemayehu 2011-07-12 15:33:31 UTC
Git commit 6080a94f23942e0df94aee4d91e84389cd77d863 by Dawit Alemayehu.
Committed on 10/07/2011 at 08:36.
Pushed by adawit into branch 'master'.

Handle top level directories with a ':' in their names, e.g. /F:, correctly on
non-Windows platforms.

BUG: 194746
FIXED-IN: 4.7.0
REVIEW: 101906

(cherry picked from commit b66e59e16c5bd94772911f01b9517abb8f13658f)

M  +6    -0    kdecore/io/kurl.cpp     

http://commits.kde.org/kdelibs/6080a94f23942e0df94aee4d91e84389cd77d863