Handle top level directories with a ':' in their names, e.g. /F:, correctly on non-Windows platforms.

BUG: 194746
FIXED-IN: 4.7.0
REVIEW: 101906